Docker, Kubernetes, Swarm/5. Kubernetes Hands On/16. Настройка HTTPS для web-app в Kubernetes. NGINX Ingress и cert manager. Let's Encrypt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - app-1.bakavets.com
        - app-2.bakavets.com
      secretName: app-tls
  rules:
    - host: app-1.bakavets.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-1
                port:
                  number: 80
    - host: app-2.bakavets.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service-2
                port:
                  number: 80
